fixed the horizontal scroll issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ html {
     background-color: rgb(238, 255, 255);
     width: 100%;
     height: 100%;
+    overflow:hidden;
 }
 
 img.computer-image{
